--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <title>😈first</title>
 </head>
+    <style>
+        body{
+            background-image:linear-gradient(blue,purple,red);
+        }
+    </style>
 <body><hr size=3 width="40%" noshade>
     <table><tr><td><a href="http://instagram.com/">    <img src="https://th.bing.com/th/id/OIP.kwkc_7Yosj69YWbWlDQ-oAHaEo?w=289&h=180&c=7&r=0&o=5&dpr=1.5&pid=1.7" alt="neko" width="50%">
     </a></td><td>
