--- a/index.html
+++ b/index.html
@@ -3,20 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>😈first</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
-    <style>
-        body{
-            background-image:linear-gradient(blue,purple,red);
-        }
-    </style>
-<body><hr size=3 width="40%" noshade>
-    <table><tr><td><a href="http://instagram.com/">    <img src="https://th.bing.com/th/id/OIP.kwkc_7Yosj69YWbWlDQ-oAHaEo?w=289&h=180&c=7&r=0&o=5&dpr=1.5&pid=1.7" alt="neko" width="50%">
+<body ><hr id="U1">
+    <table><tr><td><img src="https://th.bing.com/th/id/OIP.kwkc_7Yosj69YWbWlDQ-oAHaEo?w=289&h=180&c=7&r=0&o=5&dpr=1.5&pid=1.7" alt="neko" width="50%">
     </a></td><td>
     <h1 align="center">Utsav</h1>
-  
     <p>
     <em>Founder and <strong> Rich boy</strong> Of <em><strong>Quid</strong></em>
-    </em></p></td></tr></table>  <hr size="3" width="40%" noshade>
+    </em></p></td></tr></table>  <hr id="U1">
     <p>
         Hi! I am Utsav , the one who is going to work really hard , make his parents proud and achieve his goals.
 
@@ -35,19 +30,14 @@
     </table>
     
     <hr>
-    <h2>Current affairs</h2>
+    <h3>Current affairs</h3>
     <ul>
-        <li>In college
-            <ol type="a"><li>grade-10+1</li>
-                <li>div D</li>
-                <li>roll 34</li>
-            </ol>
+        <li>In college</li>
         </li>
-        <li>getting hit</li>
-        <li>going on</li>
+        <li>Just a beginner</li>
+        <li>In love with Learning</li>
     </ul>
     <hr>    
-    <a href="https://www.instagram.com/its__utsaav/">contact me</a>
     <a href="aboutme.html">About me</a>
 </body>
 </html>
